--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "scrollreveal": "^4.0.9",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
