--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.113.0",
+    "@react-three/fiber": "^8.10.1",
+    "@react-three/xr": "^3.2.0",
     "antd": "^5.20.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
+    "react-360-view": "^0.1.3",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
@@ -32,7 +37,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "three": "^0.151.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
