--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.30.2",
     "recharts": "^2.10.3",
     "scrollreveal": "^4.0.9",
@@ -38,7 +39,8 @@
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.10.1",
     "swiper": "^9.4.1",
-    "three": "^0.151.0"
+    "three": "^0.151.0",
+    "window-scroll": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
