--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
-DB_URL=mongodb://localhost:27017/Furniture
+# DB_URL=mongodb://localhost:27017/Furniture
+DB_URL=mongodb://13.233.115.17:27017/Furniture
 SECRET=RajanRaj@!123
 EMAIL=ganeshmurugan90448@gmail.com
 EMAIL_PASSWORD=uhad kgvr otdj uhso
