"Updated environment variables, backend database URL, and route configurations in user.js and App.jsx files."

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=5000
 # DB_URL=mongodb://localhost:27017/Furniture
-DB_URL=mongodb://13.233.115.17:27017/Furniture
+# DB_URL=mongodb://13.233.115.17:27017/Furniture
+DB_URL=mongodb+srv://developers:C0gnex@cluster0.ucuvj.mongodb.net/Furniture
 SECRET=RajanRaj@!123
 EMAIL=ganeshmurugan90448@gmail.com
 EMAIL_PASSWORD=uhad kgvr otdj uhso
