--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-# VITE_MY_API=http://localhost:5000/
-VITE_MY_API=http://13.233.115.17:5000/
+VITE_MY_API=http://localhost:5000/
+
+# server
+# VITE_MY_API=http://13.233.115.17:5000/
