--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-360-view": "^0.1.3",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.20.1",
