"Updated .env file and refactored ProductsDashboard.jsx component"

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_MY_API=http://localhost:5000/
+VITE_MY_API=http://localhost:5000/
 
 # server
 # VITE_MY_API=http://13.233.115.17:5000/
-VITE_MY_API=https://furniture-ls0z.onrender.com/
+# VITE_MY_API=https://furniture-ls0z.onrender.com/
