--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
     "leva": "^0.9.35",
+    "razorpay": "^2.9.4",
     "react": "^18.2.0",
     "react-360-view": "^0.1.3",
     "react-bootstrap": "^2.10.4",
