--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+ "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "type": "module",
   "author": "",
@@ -23,7 +24,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
-    "nodemon": "^2.0.21",
     "swiper": "^11.1.12"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
