--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "window-scroll": "^1.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
