--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Restopedic",
   "private": true,
-  "homepage": "",
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
